# matrixdb

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  FINDINGS.md  MatrixDB Engine Architectural Specification.md  Mental Model of MatrixDB.md  PRODUCTION_READINESS.md  README.md  bench_cli.py  bench_gpu_roofline.cu  build.sh  build_all.sh  client.hpp  cold_store.hpp  column_io.hpp  compute.hpp  compute_cuda.cuh  compute_mock.cpp  concurrent_server.hpp  cost_model.hpp  csv_ingest.hpp  kv_store.hpp  logging.hpp  main.cpp  make_notebook.py  make_spike_notebook.py  matrix_cli.hpp  matrixdb_cli.cpp  matrixdb_colab.ipynb  matrixdbd.cpp  memory_model.hpp  migration_executor.hpp  network_spike_colab.ipynb  ring_buffer.hpp  router.hpp  run_tests.sh  server.hpp  server_tcp.hpp  test_admission_control.cpp  (+79 more)
.github/workflows/: ci.yml
docs/: USAGE.md
docs/superpowers/plans/: 2026-06-25-cost-based-hardware-router.md  2026-06-25-increment-1-tier-model-kvstore.md  2026-06-25-increment-2-tier-manager.md  2026-06-25-increment-3-cold-store-wal.md  2026-06-26-aggregations.md  2026-06-26-catalog-snapshot.md  2026-06-26-column-persistence.md  2026-06-26-filtered-group-by.md  2026-06-26-gpu-batch-colab-ready.md  2026-06-26-group-by.md  2026-06-26-increment-4-migration-executor.md  2026-06-26-live-query-demo.md  2026-06-26-live-tiering-integration.md  2026-06-26-observability.md  2026-06-26-query-api.md  2026-06-26-query-validation.md  2026-06-26-repromotion-swap-on-promote.md  (+30 more)
examples/: orders.csv  regions.csv  tour.sql
spike/: SpikeClient.java  spike_server.cpp
(+54 files in other folders)
